# chess-data-ingestion

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
chess_data_ingestion/: chess_provider.py  cli.py  data_flow.py
tests/: conftest.py  test_chess_provider.py  test_data_flow.py
